2010-07-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* tar01/Makefile.am:
	Apply $LN_S, $PAX. Use subshell for tarball creation.
	Don't add initial_fs to CLEANFILES.
	* tar02/Makefile.am:
	Apply $LN_S, $PAX. Use subshell for tarball creation.

2010-07-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Add AC_PROG_LN_S.
	Add AC_PATH_PROG([PAX]).
	Add AM_CONDITIONAL(TARTESTS).
	* tar01/Makefile.am, tar02/Makefile.am:
	Eliminate stamp-filesystem.

2010-07-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* tar01/Makefile.am, tar02/Makefile.am:
	Add BUILT_SOURCES.

2010-07-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* tar01/Makefile.am, tar02/Makefile.am: 
	Eliminate stamp-fs-tar. Reorder CLEANFILES.
	Apply BIN2C -C/-H.

2010-07-29	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* tar01/Makefile.am, tar02/Makefile.am: Fix dependencies for parallel
	build.

2010-07-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* tar01/Makefile.am, tar02/Makefile.am: Replace mkdir cascade
	with $(MKDIR_P).

2010-07-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* tar01/Makefile.am, tar02/Makefile.am: Misc. fixes.

2010-07-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* tar01/Makefile.am, tar03/Makefile.am: Remove MANAGERS.

2010-07-27	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1532/testing
	* Makefile.am, configure.ac: Add initial tests for untar capabilities.
	* tar01/.cvsignore, tar01/Makefile.am, tar01/init.c, tar01/tar01.doc,
	tar01/tar01.scn, tar02/.cvsignore, tar02/Makefile.am, tar02/init.c,
	tar02/tar02.doc, tar02/tar02.scn: New files.

2010-07-27	Bharath Suri <bharath.s.jois@gmail.com>

	PR 1631/testing
	* gxx02/init.c, gxx02/gxx02.scn, gxx02/gxx02.doc,
	gxx02/Makefile.am, gxx02/gxx_wrappers.h: New test added
	* Makefile.am, configure.ac: Changes to accommodate new tests

2010-07-27	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1632/testing
	* Makefile.am, configure.ac: Make dedicated fatal error test for